--- a/style.css
+++ b/style.css
@@ -1,8 +1,27 @@
+#xxx{
+  background: green;
+  display: block;
+}
+
 body{
-			margin: 0px;
-		}
-		#canvas{
-			background: grey;
-			height: 100vh;
-			position: relative;
-		}
+  margin: 0px;
+}
+
+html{
+}
+
+.actions{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+.actions > #brush{
+  display: none;
+}
+
+.actions.x > #brush{
+  display: inline-block;
+}
+.actions.x > #eraser{
+  display: none
+}
