--- a/style.css
+++ b/style.css
@@ -25,10 +25,16 @@ html{
 .actions.x > #eraser{
   display: none
 } */
-body{
+*{
   margin: 0px;
   padding: 0px;
-  border: 1px solid;
+  
+  }
+  body{
+     overflow: hidden; /*禁用滚动条,屏幕不会动了 */
+  }
+  ol,ul{
+    list-style: none;
   }
   #xxx{
   background: green;
@@ -64,4 +70,28 @@ body{
   fill:red;
   transform:scale(1.2);
   
+}
+.colors{
+  position: fixed;
+  top: 50px;
+  left: 10px;
+  
+  
+}
+.colors>li{
+  width: 20px;
+  height: 20px;
+  border: 1px solid;
+  border-radius: 50%;
+  margin: 5px;
+ 
+}
+.colors>li.red{
+  background: red;
+}
+.colors>li.yellow{
+  background: yellow;
+}
+.colors>li.blue{
+  background: blue;
 }
